--- a/app/src/main/res/layout/basket_product.xml
+++ b/app/src/main/res/layout/basket_product.xml
@@ -29,6 +29,7 @@
                 android:id="@+id/basketProductName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxLength="24"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="12dp"
                 android:fontFamily="@font/open_sans"
@@ -36,6 +37,7 @@
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/imageView3"
                 app:layout_constraintTop_toTopOf="parent" />
+
 
             <TextView
                 android:id="@+id/basketAttribute"
@@ -61,8 +63,9 @@
                 app:layout_constraintStart_toEndOf="@+id/imageView3"
                 app:layout_constraintTop_toBottomOf="@+id/basketAttribute" />
 
-            <ImageView
-                android:id="@+id/imageView4"
+            <include
+                android:id="@+id/customButtonLayout"
+                layout="@layout/custom_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="49dp"
@@ -70,8 +73,10 @@
                 android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/basketAttribute"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/steppers" />
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+
 
             <TextView
                 android:id="@+id/productCount"
