--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -36,8 +36,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:fontFamily="@font/open_sans"
-        android:text="199.99₺"
+        android:textColor="@color/black"
+        android:elevation="20dp"
         android:visibility="gone"
+        android:text="199.99₺"
         app:layout_constraintBottom_toBottomOf="@+id/goToCart"
         app:layout_constraintEnd_toEndOf="@+id/goToCart"
         app:layout_constraintStart_toStartOf="@+id/goToCart"
